--- a/.env.local.example
+++ b/.env.local.example
@@ -6,3 +6,7 @@ GEMINI_API_KEY=votre_cle_api_gemini_ici
 
 # Alternative (pour compatibilité)
 # API_KEY=votre_cle_api_gemini_ici
+
+# URL de connexion MongoDB (OBLIGATOIRE pour base de données partagée)
+# Format: mongodb+srv://username:password@cluster.mongodb.net/?appName=AppName
+MONGO_URL=mongodb+srv://mohamedsherif:Mmedch86@planpei.jcvu2uq.mongodb.net/?appName=PlanPEI
