--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "recharts": "^3.4.1",
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
     "@google/genai": "^1.30.0",
-    "lucide-react": "^0.554.0",
+    "docxtemplater": "3.42.0",
     "file-saver": "2.0.5",
+    "firebase": "^12.6.0",
     "jszip": "3.10.1",
+    "lucide-react": "^0.554.0",
+    "mongodb": "^7.0.0",
     "pizzip": "3.1.4",
-    "docxtemplater": "3.42.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@vercel/node": "^5.5.9",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
