--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "docx": "^9.5.1",
     "docxtemplater": "3.42.0",
     "file-saver": "2.0.5",
     "firebase": "^12.6.0",
