--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "docxtemplater": "3.42.0",
     "file-saver": "2.0.5",
     "firebase": "^12.6.0",
+    "groq-sdk": "^0.37.0",
     "jszip": "3.10.1",
     "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
