feat: centraliser la configuration du template Word dans constants.ts
- Ajouter WORD_TEMPLATE_URL dans constants.ts avec l'URL du template Google Docs
- Modifier examWordExportService.ts pour importer WORD_TEMPLATE_URL depuis constants.ts
- Mettre à jour .env.local.example avec la documentation de WORD_TEMPLATE_URL
- Ajouter WORD_TEMPLATE_CONFIG.md pour documenter la configuration du template

Cette modification centralise la configuration du template Word en un seul endroit,
facilitant ainsi la maintenance et les futures modifications. Le template utilisé
est celui configuré dans Vercel : https://docs.google.com/document/d/1Gd7bZPsRNPbL5bpv_Pq6aAcSUgjF_FCR/export?format=docx

--- a/.env.local.example
+++ b/.env.local.example
@@ -10,3 +10,9 @@ GEMINI_API_KEY=votre_cle_api_gemini_ici
 # URL de connexion MongoDB (OBLIGATOIRE pour base de données partagée)
 # Format: mongodb+srv://username:password@cluster.mongodb.net/?appName=AppName
 MONGO_URL=mongodb+srv://mohamedsherif:Mmedch86@planpei.jcvu2uq.mongodb.net/?appName=PlanPEI
+
+# URL du template Word pour la génération d'examens (CONFIGURÉ DANS VERCEL)
+# Cette URL pointe vers le template Google Docs utilisé pour les examens
+# IMPORTANT: Cette variable est déjà définie dans constants.ts
+# Elle peut être surchargée via les variables d'environnement Vercel si nécessaire
+WORD_TEMPLATE_URL=https://docs.google.com/document/d/1Gd7bZPsRNPbL5bpv_Pq6aAcSUgjF_FCR/export?format=docx
